# swagger-output.json
@@ -665,13 +665,6 @@
             "schema": {
               "type": "string"
             }
-          },
-          {
-            "name": "authorization",
-            "in": "header",
-            "schema": {
-              "type": "string"
-            }
           }
         ],
         "responses": {
@@ -680,12 +673,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           }
         },
         "security": [
@@ -1398,6 +1385,49 @@
           }
         }
       }
+    },
+    "/api/mercadoPago/return": {
+      "get": {
+        "tags": [
+          "Mercado Pago"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "payment_id",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "status",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "external_reference",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "merchant_order_id",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -1549,9 +1579,21 @@
         "items": {
           "type": "object",
           "properties": {
+            "_id": {
+              "type": "string",
+              "example": "675659ec9247bd1a5c6a8fe2"
+            },
             "title": {
               "type": "string",
               "example": "Cappuccino"
+            },
+            "img": {
+              "type": "string",
+              "example": "http://dummyimage.com/300x300.png/ff4444/ffffff"
+            },
+            "description": {
+              "type": "string",
+              "example": "Lorem Ipsum"
             },
             "quantity": {
               "type": "number",
@@ -1563,7 +1605,10 @@
             }
           },
           "required": [
+            "_id",
             "title",
+            "img",
+            "description",
             "quantity",
             "precio"
           ]
